--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-big-calendar": "^1.8.9",
     "cloudinary": "^2.9.0",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.563.0",
     "moment": "^2.30.1",
     "next": "^14.2.35",
     "next-cloudinary": "^6.13.0",
